NEXT-20647 - NEXT-20638 - Fix line item children smooth collapse fixes #2396

--- a/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item-children.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item-children.scss
@@ -18,8 +18,8 @@
         }
     }
 
-    .cart-item-children-elements {
-        padding: 12px 0 0;
+    .cart-item-children-elements > div:first-of-type {
+        padding: 20px 4px 0;
     }
 
     .cart-item-headline {
